resources/scss/_themes.scss
@media screen {

    html.theme-dark {

        $darkFgColor: #889;
        $darkBgColor: #050509;
        $darkFgHighlight: #67679e;

        ::selection {
            background-color: $darkBgSelection;
        }

        color: $darkFgColor;
        background-color: $darkBgColor;

        div#background {
            background-color: $darkBgColor;
            background-blend-mode: hard-light;
            opacity: 0.25;
        }

        #escape-modal {
            background-color: $darkBgColor;
        }

        div#popover-contents-modal {
            background-color: $darkBgColor;
        }

        a.button, input[type="submit"], button {
            color: #aaa;
        }

        a {
            color: #aaa;
            text-decoration: none;
        }

        a:hover { 
            color: #ddd;
            text-decoration: none;
        }

        a.web-link {
            background-color: inherit;
        }

        a.web-marker {
            background-color: #093233;
        }

        div#popover-comment-button,
        div#popover-comment-close {
            background-color: $darkBgColor;
            color: $darkFgColor;
            border: 3px $darkFgHighlight solid;
            box-shadow: 0 0 0.9rem $darkFgHighlight;
        }

        div#popover-comment-button i,
        div#popover-comment-close i {
            color: $darkFgColor;
        }

        button.popover-button {
            background-color: $darkBgColor;
            color: $darkFgColor;
            box-shadow: 0 0 0.9rem $darkFgHighlight;
            border: 3px $darkFgHighlight solid;
        }

        #page, #editor {
            color: $darkFgColor;
            background-color: $darkBgColor;
        }

        #editor textarea {
            color: $darkFgColor;
        }

        #editor textarea::-webkit-scrollbar, 
        #editor main::-webkit-scrollbar {
            width: 1em;
        }

        #editor textarea::-webkit-scrollbar-track, 
        #editor main::-webkit-scrollbar-track {
            background.color: $darkBgColor;
        }

        #editor textarea::-webkit-scrollbar-thumb, 
        #editor main::-webkit-scrollbar-thumb {
            background-color: $darkFgHighlight;
        }

        #editor textarea::-webkit-resizer,
        #editor textarea::-webkit-corner {
            display: none;
        }


        #page {
            border: 1pt solid rgba(128, 128, 128, 0.3);
        }

        h1, h2, h3, h4, h5, h6, .fa {
            color: $darkFgHighlight;
        }

        hr.div-solid {
            border-bottom: 1pt solid $darkFgColor;
        }

        hr.div-dotted {
            border-bottom: 1pt dotted $darkFgHighlight;
        }

        ins {
            text-decoration: none;
            border-bottom: 1pt dotted $darkFgColor;
            color: $darkFgInsert;
        }
        del {
            color: $darkFgDelete;
            border-bottom: 1px dotted $darkFgColor;
        }

        tt, textarea {
            color: black;
            background-color: beige;
        }

        tt, td tt {
            padding: 0 0.3rem;
        }

        var { 
            border: 1pt solid $darkFgHighlight;
            color: $darkFgHighlight;
        }
        kbd {
            border: 1pt dotted $darkFgColor;
            color: inherit;
        }

        .gloss {
            .source {
                b {
                    color: $darkFgHighlight;
                }
            }
        }

        .wiki-demo, .wiki-demo-wide {
            .wiki-demo-source {
                border-right: none;
                padding-right: 0;

                pre {
                    padding: 0.4rem 1rem;
                    background-color: black;
                }
            }
        }

        .wiki-demo-wide {
            .wiki-demo-output {
                border-left: 0.1rem dotted $darkFgHighlight;
            }
        }

        aside {
            border-left: 0.1rem dotted $darkFgColor;
        }

        .note, .box-dotted {
            border: 0.1rem dotted $darkFgColor;
        }

        .license {
            img {
                opacity: .5;
            }
        }
    
        div#popover-nav-modal,
        div#popover-comment-modal {
            background-color: $darkBgColor;
        }
    
        div.popover-body {
            background-color: $darkBgColor;
        }
    }

    html.theme-readable {
        font-size: 30pt;
        line-height: 40pt;
    }

    html.theme-compact {
        font-size: 9pt;
        line-height: 13pt;
        font-family: $fontFamilySansSerif;
    }

}

@media print {

    html.theme-readable {
        font-size: 14pt;
        line-height: 20pt;
    }

    html.theme-compact {
        font-size: 9pt;
        line-height: 13pt;
        font-family: $fontFamilySansSerif;
    }

}

